--- a/.github/workflows/AX6-immortalwrt-5.15.yml
+++ b/.github/workflows/AX6-immortalwrt-5.15.yml
@@ -125,7 +125,7 @@ jobs:
         mkdir upload
         cd upload
         7z a -t7z dl.7z ../openwrt/dl -m0=FLZMA2 -mmt=on
-        7z a -t7z immortalwrt.7z ../openwrt '-xr!dl' -m0=FLZMA2 d=28:mf=bt4b:fb=64 -ms=on -mmt=on mtc=off -mta=off -mtr=off
+        7z a -t7z immortalwrt.7z ../openwrt '-xr!dl' -m0=FLZMA2 -ms=on -mmt=on mtc=off -mta=off -mtr=off
 
     - name: Upload bin directory
       uses: actions/upload-artifact@main
