--- a/AX6-immortalwrt-5.15.config
+++ b/AX6-immortalwrt-5.15.config
@@ -58,16 +58,16 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 
 CONFIG_PACKAGE_ttyd=y
 
-#根据防火墙选择合适的版本(待编译测试)
+#根据防火墙选择合适的版本
 CONFIG_PACKAGE_luci-app-upnp=y
 #CONFIG_PACKAGE_miniupnpd-iptables=y
-#CONFIG_PACKAGE_miniupnpd-nftables=y
+CONFIG_PACKAGE_miniupnpd-nftables=y
 
 
-#FullConeNat支持(待编译测试)
+#FullConeNat支持
 #CONFIG_PACKAGE_kmod-ipt-fullconenat=y
 #CONFIG_PACKAGE_iptables-mod-fullconenat=y
-#CONFIG_PACKAGE_nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
 
 #转发加速扩展管理器
 # CONFIG_PACKAGE_luci-app-turboacc is not set
