--- a/AX6-robimarko-5.15.config
+++ b/AX6-robimarko-5.15.config
@@ -149,7 +149,7 @@ CONFIG_PACKAGE_qca-nss-gmac=y
 CONFIG_PACKAGE_kmod-qca-rfs=y
 #Kernel module for QCA Receiving Flow Steering
 
-#CONFIG_PACKAGE_kmod-qca-nss-crypto=y
+CONFIG_PACKAGE_kmod-qca-nss-crypto=y
 
 #CONFIG_PACKAGE_kmod-qca-mcs=y
 #This package installs the IGMP/MLD Snooping Module
