--- a/.github/workflows/AX6-Openwrt-5.15.yml
+++ b/.github/workflows/AX6-Openwrt-5.15.yml
@@ -109,7 +109,7 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) && curl --data chat_id="5433096526" --data "text=Openwrt编译成功" "https://api.telegram.org/bot6059390181:AAHCsjxsPfsXAyAvXcRxcOjIVaifDICW5fA/sendMessage" || make -j$(nproc) V=s && curl --data chat_id="5433096526" --data "text=Openwrt编译失败!" "https://api.telegram.org/bot6059390181:AAHCsjxsPfsXAyAvXcRxcOjIVaifDICW5fA/sendMessage"
+        make -j$(nproc) && curl --data chat_id="5433096526" --data "text=Openwrt编译成功" "https://api.telegram.org/bot6059390181:AAHCsjxsPfsXAyAvXcRxcOjIVaifDICW5fA/sendMessage" || make -j$(nproc) V=s || curl --data chat_id="5433096526" --data "text=Openwrt编译失败!" "https://api.telegram.org/bot6059390181:AAHCsjxsPfsXAyAvXcRxcOjIVaifDICW5fA/sendMessage"
         echo "::set-output name=status::success"
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
@@ -125,7 +125,6 @@ jobs:
         mkdir upload
         cd upload
         7z a dl.7z ../openwrt/dl -m0=LZMA2 -mmt=on
-        7z a Openwrt.7z ../openwrt '-xr!dl' -m0=LZMA2 -ms=on -mmt=on
 
     - name: Upload bin directory
       uses: actions/upload-artifact@main
@@ -172,17 +171,10 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "::set-output name=release_tag::$(date +"AX6-OP-K5.15-%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
-        echo "Redmi-AX6-5.15 OpenWRT Firmware" >> release.txt
-        echo "IP：192.168.1.1" >> release.txt
-        echo "Default Account：root" >> release.txt
-        echo "Default Password：password" >> release.txt
-        echo "Source Code：https://github.com/openwrt/openwrt" >> release.txt
-        echo "Kernel：5.15.y" >> release.txt
-        echo "${{ env.useVersionInfo }}" >> release.txt
         echo "::set-output name=status::success"
 
     - name: Upload firmware to release
