--- a/AX6-Boos4721-5.10.config
+++ b/AX6-Boos4721-5.10.config
@@ -38,6 +38,7 @@ CONFIG_LIBSODIUM_MINIMAL=y
 
 #需要补充的默认组件
 CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_wpad-wolfssl=y
 CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_luci-mod-dashboard=y
 
