--- a/AX6-robimarko-5.15.config
+++ b/AX6-robimarko-5.15.config
@@ -42,7 +42,7 @@ CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_autocore-arm=y
 CONFIG_PACKAGE_knot-host=y
-CONFIG_PACKAGE_ath11k-board-ipq8074=y
+#CONFIG_PACKAGE_ath11k-board-ipq8074=y
 CONFIG_PACKAGE_luci-mod-dashboard=y
 
 #不需要的默认组件
@@ -61,16 +61,16 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 
 CONFIG_PACKAGE_ttyd=y
 
-#根据防火墙选择合适的版本(待编译测试)
+#根据防火墙选择合适的版本
 CONFIG_PACKAGE_luci-app-upnp=y
 #CONFIG_PACKAGE_miniupnpd-iptables=y
-#CONFIG_PACKAGE_miniupnpd-nftables=y
+CONFIG_PACKAGE_miniupnpd-nftables=y
 
 
-#FullConeNat支持(待编译测试)
+#FullConeNat支持
 #CONFIG_PACKAGE_kmod-ipt-fullconenat=y
 #CONFIG_PACKAGE_iptables-mod-fullconenat=y
-#CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
 
 #转发加速扩展管理器
 # CONFIG_PACKAGE_luci-app-turboacc is not set
@@ -154,7 +154,7 @@ CONFIG_PACKAGE_kmod-qca-nss-crypto=y
 #CONFIG_PACKAGE_kmod-qca-mcs=y
 #This package installs the IGMP/MLD Snooping Module
 
-#CONFIG_PACKAGE_kmod-qca-nss-cfi-cryptoapi=y
+CONFIG_PACKAGE_kmod-qca-nss-cfi-cryptoapi=y
 #Kernel driver for NSS cfi
 
 # CONFIG_PACKAGE_kmod-qca-nss-drv-qdisc is not set
