--- a/.github/workflows/AX6-LEDE-5.15.yml
+++ b/.github/workflows/AX6-LEDE-5.15.yml
@@ -28,7 +28,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: AX6-LEDE-5.15.config
   DIY_P1_SH: common-diy-part1.sh
-  DIY_P2_SH: common-diy-part2.sh
+  DIY_P2_SH: lede-diy-part2.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
