--- a/AX6-Boos4721-5.10.config
+++ b/AX6-Boos4721-5.10.config
@@ -62,6 +62,7 @@ CONFIG_PACKAGE_ttyd=y
 #根据防火墙选择合适的版本
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_miniupnpd-iptables=y
+# CONFIG_PACKAGE_miniupnpd is not set
 #CONFIG_PACKAGE_miniupnpd-nftables=y
 
 
