--- a/AX6-Boos4721-5.10.config
+++ b/AX6-Boos4721-5.10.config
@@ -15,12 +15,20 @@ CONFIG_KERNEL_BUILD_USER=""
 CONFIG_KERNEL_BUILD_DOMAIN=""
 
 #杂项参数
+CONFIG_DEVEL=y
+CONFIG_EXPERIMENTAL=y
 CONFIG_CCACHE=y
 CONFIG_CCACHE_DIR=""
+CONFIG_TARGET_OPTIONS=y
 CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD=y
-#CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
+CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
 #CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
 CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_LUCI_SRCDIET=y
+CONFIG_LUCI_JSMIN=y
+CONFIG_LUCI_CSSTIDY=y
+CONFIG_DROPBEAR_ZLIB=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_LIBCURL_NGHTTP2=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
@@ -56,13 +64,17 @@ CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-udp2raw=y
+CONFIG_PACKAGE_luci-app-dnsproxy=y
 
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_iperf3=y
+# CONFIG_PACKAGE_autocore-arm is not set
 
 #根据防火墙选择合适的版本
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_miniupnpd-iptables=y
 # CONFIG_PACKAGE_miniupnpd is not set
+CONFIG_PACKAGE_miniupnpd-iptables=y
 #CONFIG_PACKAGE_miniupnpd-nftables=y
 
 
@@ -164,6 +176,7 @@ CONFIG_PACKAGE_kmod-qca-rfs=y
 # CONFIG_PACKAGE_kmod-ipt-offload is not set
 # CONFIG_PACKAGE_kmod-nf-flow is not set
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
+CONFIG_PACKAGE_kmod-tcp-bbr2=y
 CONFIG_PACKAGE_kmod-fast-classifier=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
@@ -176,7 +189,7 @@ CONFIG_PACKAGE_kmod-shortcut-fe-drv=y
 # CONFIG_PACKAGE_luci-app-smartdns is not set
 # CONFIG_PACKAGE_luci-app-fullconenat is not set
 
-#CONFIG_PACKAGE_luci-app-attendedsysupgrade=y 
+# CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
