--- a/AX6-Openwrt-5.15.config
+++ b/AX6-Openwrt-5.15.config
@@ -15,12 +15,20 @@ CONFIG_KERNEL_BUILD_USER=""
 CONFIG_KERNEL_BUILD_DOMAIN=""
 
 #杂项参数
+CONFIG_DEVEL=y
+CONFIG_EXPERIMENTAL=y
 CONFIG_CCACHE=y
 CONFIG_CCACHE_DIR=""
+CONFIG_TARGET_OPTIONS=y
 CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD=y
-CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
+CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
 CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
 CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_LUCI_SRCDIET=y
+CONFIG_LUCI_JSMIN=y
+CONFIG_LUCI_CSSTIDY=y
+CONFIG_DROPBEAR_ZLIB=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_LIBCURL_NGHTTP2=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
@@ -53,8 +61,12 @@ CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-udp2raw=y
+CONFIG_PACKAGE_luci-app-dnsproxy=y
 
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_autocore-arm=y
 
 #根据防火墙选择合适的版本
 CONFIG_PACKAGE_luci-app-upnp=y
@@ -129,12 +141,12 @@ CONFIG_PACKAGE_kmod-qca-ssdk-hnat=y
 CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
 CONFIG_PACKAGE_qca-ssdk-shell=y
 
-#NSS加速 64bit
-CONFIG_PACKAGE_kmod-qca-nss-drv-64=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe-64=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr-64=y
-CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr-64=y
-CONFIG_PACKAGE_kmod-qca-nss-ecm-64=y
+#NSS加速 64bit(5.15不可用)
+# CONFIG_PACKAGE_kmod-qca-nss-drv-64 is not set
+# CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe-64 is not set
+# CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr-64 is not set
+# CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr-64 is not set
+# CONFIG_PACKAGE_kmod-qca-nss-ecm-64 is not set
 CONFIG_PACKAGE_qca-nss-ecm-64_ECM_MULTICAST_ENABLE=y
 
 #NSS附加扩展
@@ -144,12 +156,12 @@ CONFIG_PACKAGE_qca-nss-gmac=y
 CONFIG_PACKAGE_kmod-qca-rfs=y
 #Kernel module for QCA Receiving Flow Steering
 
-#CONFIG_PACKAGE_kmod-qca-nss-crypto=y
+CONFIG_PACKAGE_kmod-qca-nss-crypto=y
 
 #CONFIG_PACKAGE_kmod-qca-mcs=y
 #This package installs the IGMP/MLD Snooping Module
 
-#CONFIG_PACKAGE_kmod-qca-nss-cfi-cryptoapi=y
+CONFIG_PACKAGE_kmod-qca-nss-cfi-cryptoapi=y
 #Kernel driver for NSS cfi
 
 # CONFIG_PACKAGE_kmod-qca-nss-drv-qdisc is not set
@@ -160,6 +172,7 @@ CONFIG_PACKAGE_kmod-qca-rfs=y
 # CONFIG_PACKAGE_kmod-ipt-offload is not set
 # CONFIG_PACKAGE_kmod-nf-flow is not set
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
+CONFIG_PACKAGE_kmod-tcp-bbr2=y
 CONFIG_PACKAGE_kmod-fast-classifier=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
