--- a/.github/workflows/AX6-Boos4721-5.10.yml
+++ b/.github/workflows/AX6-Boos4721-5.10.yml
@@ -29,7 +29,7 @@ env:
   CONFIG_FILE: AX6-Boos4721-5.10.config
   DIY_P1_SH: common-diy-part1.sh
   DIY_P2_SH: boos-diy-part2.sh
-  UPLOAD_BIN_DIR: true
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
@@ -124,7 +124,8 @@ jobs:
       run: |
         mkdir upload
         cd upload
-        7z a dl.7z ../openwrt/dl -m0=LZMA2 -mmt=on
+        7z a dl.7z ../openwrt/dl -m0=LZMA2 -mmt=on
+
 
     - name: Upload bin directory
       uses: actions/upload-artifact@main
