--- a/.github/workflows/AX6-Openwrt-5.15.yml
+++ b/.github/workflows/AX6-Openwrt-5.15.yml
@@ -29,7 +29,7 @@ env:
   CONFIG_FILE: AX6-Openwrt-5.15.config
   DIY_P1_SH: common-diy-part1.sh
   DIY_P2_SH: common-diy-part2.sh
-  UPLOAD_BIN_DIR: true
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
