--- a/AX6-LEDE-5.10.config
+++ b/AX6-LEDE-5.10.config
@@ -46,8 +46,7 @@ CONFIG_LIBSODIUM_MINIMAL=y
 
 #需要补充的默认组件
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_hostapd-common=y
-CONFIG_PACKAGE_wpad-wolfssl=y
+CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_luci-mod-dashboard=y
 
 #不需要的默认组件
@@ -73,6 +72,7 @@ CONFIG_PACKAGE_autocore-arm=y
 
 #根据防火墙选择合适的版本
 CONFIG_PACKAGE_luci-app-upnp=y
+# CONFIG_PACKAGE_miniupnpd is not set
 CONFIG_PACKAGE_miniupnpd-iptables=y
 #CONFIG_PACKAGE_miniupnpd-nftables=y
 
