--- a/AX6-LEDE-5.10.config
+++ b/AX6-LEDE-5.10.config
@@ -68,6 +68,7 @@ CONFIG_PACKAGE_luci-app-dnsproxy=y
 
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_udp2raw=y
 CONFIG_PACKAGE_autocore-arm=y
 
 
