--- a/AX6-LEDE-5.10.config
+++ b/AX6-LEDE-5.10.config
@@ -22,7 +22,7 @@ CONFIG_CCACHE_DIR=""
 CONFIG_TARGET_OPTIONS=y
 CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
-CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
+#CONFIG_JSON_OVERVIEW_IMAGE_INFO=y
 CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_LUCI_SRCDIET=y
 CONFIG_LUCI_JSMIN=y
@@ -46,8 +46,7 @@ CONFIG_LIBSODIUM_MINIMAL=y
 
 #需要补充的默认组件
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_hostapd-common=y
-
+CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_luci-mod-dashboard=y
 
 #不需要的默认组件
@@ -70,6 +69,8 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_udp2raw=y
 CONFIG_PACKAGE_autocore-arm=y
+CONFIG_PACKAGE_mhz=y
+CONFIG_PACKAGE_nssinfo=y
 
 
 #根据防火墙选择合适的版本
